2008-08-15  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wired.c
		- (pppoe_update_ui): try to pull PPPoE password out of keyring

2008-08-15  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-ttls.c
	  src/wireless-security/ws-wep-key.c
		- (eap_method_ttls_new, key_index_combo_changed_cb, ws_wep_key_new): add
			missing change notifiers (bgo #547709)

2008-08-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wired.c
	  src/connection-editor/page-wired-security.c
	  src/wired-dialog.c
		- Don't use gtk_box_pack_start_defaults(), which is deprecated
			(bgo #547158)

2008-08-12  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_migrate_0_7_openvpn_properties): migrate 'shared' -> 'static'
			too, fix missing initialization that caused connection type not to
			get migrated

2008-08-12  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/page-ip4.c (ce_page_ip4_new): Rename the 
	"Prefix" column header to "Netmask", which is hopefully better
	understood.
	(parse_netmask): Implement. Accept both prefix length and netmask.
	(ui_to_setting): Use parse_netmask() to ... parse netmask.

2008-08-11  Dan Williams  <dcbw@redhat.com>

	Update to match NM svn3924 vpn setting changes (consolidated vpn and
	vpn-properties settings; vpn-specific data now a hash of string:string
	instead of string:variant); convert old GConf entries to new format

2008-08-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/ce-page-wireless.glade
		- Replace "Example:" labels with tooltips

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- 'shared' is pointless for VPN connections

2008-08-06  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
		- Add a checkbox for 'ignore-auto-routes'

	* src/connection-editor/ip4-routes-dialog.c