@@ -1,5 +1,15 @@
 2008-08-15  Dan Williams  <dcbw@redhat.com>
 
+	* src/wired-dialog.c
+		- (dialog_init): use standard icon theme icons
+
+	* src/wireless-dialog.c
+		- (internal_init): use standard icon theme icons; use wireless icon
+			for "Connect to other..." and "Create new...", but use password
+			icon when asking only for secrets (bgo #538942)
+
+2008-08-15  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-wired.c
 		- (pppoe_update_ui): try to pull PPPoE password out of keyring
 
